Construção da rota de criação de programas

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
                                     <a href="/programa" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Listar Programas</a>
                                 </li>
                                 <li>
-                                    <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Cadastrar Programas</a>
+                                    <a href="/programa/novo" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Cadastrar Programas</a>
                                 </li>
                             </ul>
                             <div class="py-1">
