Funcionalidade de edição dos programas cadastrados

--- a/templates/programa/novo.html
+++ b/templates/programa/novo.html
@@ -10,7 +10,7 @@
                 <div>
                     <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white" for="user_avatar">Upload de imagem</label>
                     <input class="block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400" aria-describedby="user_avatar_help" id="user_avatar" type="file" name="foto">
-                    <div class="mt-1 text-sm text-gray-500 dark:text-gray-300 mb-3" id="user_avatar_help">Neste campo envie a imagem que corresponderá ao logo do programa</div>
+                    <div class="mt-1 text-sm text-gray-500 dark:text-gray-300 mb-3" id="user_avatar_help">Neste campo envie a imagem que corresponderá a logo do programa</div>
                 </div>
                 <div class="grid gap-4 sm:grid-cols-2 sm:gap-6">
                     <div class="sm:col-span-2">
